@startuml reference-number-policies
title Reference Number Policies

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam note {
  BackgroundColor #FFFBEB
  BorderColor #B45309
}

package "reference_numbers" <<Bounded Context>> {
  class ReferencePolicy <<Aggregate Root>> {
    - id: ReferencePolicyId
    - kind: ReferenceKind
    - mask: ReferenceMask
    - status: ReferencePolicyStatus
    - activeFrom: DateTime?
    - activeUntil: DateTime?
    + activate(actorId): ReferencePolicy
    + deactivate(actorId): ReferencePolicy
    + matches(value): Boolean
  }

  class ReferenceMask <<Value Object>> {
    - raw: String
    + render(onDate, sequence): String
    + sequenceScope(): SequenceScope
    + scopeKey(onDate): String
    + toRegex(): Pattern
  }

  class LegacyReferenceFormat <<Value Object>> {
    - kind: ReferenceKind
    - name: String
    + matches(value): Boolean
  }

  class ReferenceSequence <<Repository State>> {
    - policyId: ReferencePolicyId
    - scopeKey: String
    - nextValue: Integer
  }

  enum ReferenceKind {
    PROPOSAL
    COLLECTION_USE_PROJECT
    OBJECT_ACCESS_LOG
    OBJECT_OCCURRENCE_LOG
    PUBLICATION_LOG
  }

  enum ReferencePolicyStatus {
    DRAFT
    ACTIVE
    INACTIVE
    RETIRED
  }

  enum ReferencePolicyEvent {
    CREATED
    ACTIVATED
    DEACTIVATED
    RETIRED
  }

  enum SequenceScope {
    GLOBAL
    YEAR
    MONTH
    DAY
  }
}

class "SYS_ADMIN" as admin
class "Admin API\n/admin/reference-number-policies" as api
class "Proposal/project/log use cases" as consumers

admin --> api : list / preview / create / activate / deactivate
api --> ReferencePolicy
ReferencePolicy *-- ReferenceMask
ReferencePolicy --> ReferenceSequence : allocates through active policy
ReferenceMask ..> SequenceScope : derived from the mask tokens
consumers ..> ReferencePolicy : request next reference by kind
consumers ..> LegacyReferenceFormat : recognise pre-policy references


@enduml
